aarlo/pyaarlo
0.7.2b12: Fix doorbell capabilities.
  Custom user agent support.
0.7.2b11: Possible doorbell fix.
0.7.2b10: Better choose back end.
  Tidy snapshot handling.
0.7.2b9: Stop Arlo on authentication failure.
0.7.2b8: Fix IMAP compatability issues.
0.7.2b7: Allow sse backend to be used (fix reconnect).
0.7.2b6: Allow sse backend to be used.
         Fix missing time zones
0.7.2b5: Fix warning message about device attributes.
0.7.2b4: Read properties for devices in device refresh
0.7.2b2: Read properties for devices in device refresh.
0.7.2b1: Read properties for devices in initial setup.
0.7.2b0: Use mqtt backend for events

0.7.1.8: Added battery device class
         Stop polling certain devices.
0.7.1.7: Added width/height to camera_image method
         Don't get resources from Wired doorbells.
0.7.1.6: Support IMAP port.
         Don't get resources from Essential cameras.
0.7.1.5: Reduced ping commands
0.7.1.4: Reduced ping commands
0.7.1.3: Better schedule handling.
         Run event handlers in the background thread.
0.7.1.2: Fix headers after tidy up.
0.7.1.1: Add GO camera support.
         Add video_url to last_capture sensor.
         Cache authentication token.
0.7.1: Remove double connected doorbell entity.
0.7.1b15: Allow quoted printable in tfa email from Arlo.
0.7.1b14: Fix for Home Assistant beta.
0.7.1b13: Fix wirefree doorbell duplicate entries.
0.7.1b12: Fix wirefree doorbell drain.
0.7.1b11: Added new automation return value.
0.7.1b10: Fix plugged icon.
0.7.1b9: Add cloudscraper support.
0.7.1b7: Stop HA polling us.
        Allow removal of unicode characters from entity ids
        Siren on wired doorbell.
        Better doorbell icon.
0.7.1b6: Add new event handling
        Allow custimisable disarmed mode
0.7.1b5: Don't rely on camera reporting back idle status
0.7.1b4: Smart user agents.
0.7.1b3: Fixed for 2021.3
0.7.1b1: Add media download.

0.7.0.18: Update user agent and request headers.